--- a/index.html
+++ b/index.html
@@ -3,156 +3,168 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Barony Live Tracker - Ultra Sync</title>
-    <script src="https://cdn.jsdelivr.net/npm/gun/gun.js"></script>
+    <title>Barony Tracker - PRO SYNC</title>
+    <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=VT323&display=swap');
         :root {
-            --bg-color: #0f0a07; --panel-bg: #261a12; --border-gold: #8c6a31;
-            --text-main: #e0d0b8; --row-even: #1e150f; --row-odd: #2a1d15;
-            --highlight: #f2c05e; --danger: #8a1313; --success: #4CAF50;
+            --bg: #0f0a07; --panel: #261a12; --gold: #8c6a31;
+            --text: #e0d0b8; --highlight: #f2c05e; --danger: #8a1313;
         }
-        body { background-color: var(--bg-color); color: var(--text-main); font-family: 'VT323', monospace; margin: 0; padding: 10px; display: flex; justify-content: center; }
-        .container { width: 100%; max-width: 950px; border: 4px solid var(--border-gold); background: var(--panel-bg); }
-        header { background: #1a120b; padding: 15px; border-bottom: 4px solid var(--border-gold); }
-        .header-top { display: flex; justify-content: space-between; align-items: center; }
-        .player-list { font-size: 1.2rem; color: #8a7a6a; margin-top: 10px; min-height: 1.5rem; }
-        .player-tag { color: var(--highlight); margin-right: 12px; border-bottom: 1px solid var(--highlight); }
-        h1 { margin: 0; font-size: 2rem; color: var(--highlight); text-transform: uppercase; }
+        body { background: var(--bg); color: var(--text); font-family: 'VT323', monospace; padding: 10px; display: flex; justify-content: center; }
+        .container { width: 100%; max-width: 950px; border: 4px solid var(--gold); background: var(--panel); box-shadow: 0 0 20px #000; }
+        header { padding: 15px; border-bottom: 4px solid var(--gold); background: #1a120b; }
         .scroll-grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); background: #000; }
-        .scroll-item { display: flex; justify-content: space-between; align-items: center; padding: 10px 15px; border: 1px solid #33241a; }
-        .scroll-item:nth-child(even) { background: var(--row-even); }
-        .scroll-item:nth-child(odd) { background: var(--row-odd); }
-        .scroll-name { font-size: 1.3rem; }
-        select { background: #000; color: var(--highlight); border: 2px solid var(--border-gold); font-family: 'VT323', monospace; font-size: 1.1rem; padding: 4px; width: 160px; cursor: pointer; }
-        select.identified { border-color: var(--success); color: #fff; box-shadow: 0 0 5px var(--success); }
-        .controls { padding: 15px; background: #1a120b; display: flex; flex-wrap: wrap; gap: 15px; justify-content: space-between; align-items: center; border-top: 4px solid var(--border-gold); }
-        .room-actions { display: flex; gap: 10px; align-items: center; }
-        input { background: #000; border: 1px solid var(--border-gold); color: var(--highlight); font-family: 'VT323', monospace; padding: 5px; width: 80px; text-align: center; }
-        button { background: #3d2b1f; color: #fff; border: 2px solid var(--border-gold); font-family: 'VT323', monospace; padding: 6px 12px; cursor: pointer; font-size: 1rem; }
-        button:hover { background: #4d3a2b; }
-        .reset-btn { background: var(--danger); border-color: #ff4d4d; font-size: 1.2rem; }
+        .item { display: flex; justify-content: space-between; align-items: center; padding: 10px 15px; border: 1px solid #33241a; }
+        .item:nth-child(even) { background: #1e150f; }
+        select { background: #000; color: var(--highlight); border: 2px solid var(--gold); font-family: 'VT323'; font-size: 1.2rem; width: 160px; cursor: pointer; }
+        select.identified { border-color: #4CAF50; color: #fff; }
+        .controls { padding: 15px; display: flex; justify-content: space-between; align-items: center; background: #1a120b; border-top: 2px solid var(--gold); }
+        button { background: #3d2b1f; color: #fff; border: 2px solid var(--gold); cursor: pointer; font-family: 'VT323'; padding: 6px 12px; font-size: 1rem; }
+        .player-tag { color: var(--highlight); margin-right: 12px; border-bottom: 1px solid; font-size: 1.2rem; }
+        .status-dot { height: 10px; width: 10px; border-radius: 50%; display: inline-block; margin-right: 5px; background: #555; }
+        .online { background: #4CAF50; box-shadow: 0 0 5px #4CAF50; }
     </style>
 </head>
 <body>
     <div class="container">
         <header>
-            <div class="header-top">
-                <h1>📜 Barony Scrolls</h1>
-                <div id="counter" style="color: var(--success); font-size: 1.4rem;">Discovered: 0 / 24</div>
+            <div style="display:flex; justify-content:space-between; align-items: center;">
+                <h1 style="margin:0">📜 BARONY SCROLLS</h1>
+                <div id="counter" style="color: #4CAF50; font-size: 1.6rem;">Discovered: 0 / 24</div>
             </div>
-            <div class="player-list" id="playerList">In Dungeon: </div>
+            <div id="playerList" style="margin-top:10px; color:#8a7a6a; font-size: 1.1rem;">In Dungeon: </div>
         </header>
-        <div id="scrollGrid" class="scroll-grid"></div>
+        <div id="grid" class="scroll-grid"></div>
         <div class="controls">
-            <div class="room-actions">
-                <span id="roomDisplay" style="color:#8a7a6a">Room: ...</span>
-                <button onclick="copyRoomLink()">Copy Link</button>
-                <input type="text" id="manualRoom" placeholder="ID">
-                <button onclick="joinManualRoom()">Join</button>
+            <div>
+                <span id="roomDisp" style="color:#8a7a6a"><span id="syncDot" class="status-dot"></span>Room: ...</span>
+                <button onclick="copyLink()">Copy Link</button>
             </div>
-            <button class="reset-btn" onclick="resetRun()">RESET RUN</button>
+            <button style="background:var(--danger); border-color: #ff4d4d;" onclick="resetRun()">RESET RUN</button>
         </div>
     </div>
 
     <script>
-        const SCROLL_NAMES = ["Zelgo Mer", "Juyed Awk Yacc", "NR 9", "Nobary Robyan", "Pratyavayah", "Daiyen Fooels", "Lep Gex Ven Zea", "Prirutsenie", "Elbib Yloh", "Verr Yed Horre", "Venzar Borgavve", "Tharr", "Yum Yum", "Kernod Wel", "Elam Ebow", "Duam Xnaht", "Andova Begarin", "Kirje", "Hackem Muche", "Velox Neb", "Foobie Bletch", "Temov", "Garven Deh", "Read Me"];
-        const ALL_EFFECTS = ["???", "Blank", "Fire", "Remove Curse", "Light", "Identify", "Repair", "Destroy Armor", "Magic Mapping", "Charging", "Conjure Arrow", "Food", "Teleportation", "Summon", "Enchant Weapon", "Enchant Armor", "Letter"];
+        // CONFIG - Using the details you provided
+        const SUB_URL = "https://pvbeaaatyuunnlzybgsu.supabase.co";
+        const SUB_KEY = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InB2YmVhYWF0eWF1bm5lenliZ3N1Iiwicm9sZSI6ImFub24iLCJpYXQiOjE3NzA4NDM1NDQsImV4cCI6MjA4NjQxOTU0NH0.7YZAuLHZnv8Zm6d-2lmf8oHmQ7Ebw5dznF8ZwqdIDOY";
         
+        const supabase = supabase.createClient(SUB_URL, SUB_KEY);
+
+        const NAMES = ["Zelgo Mer", "Juyed Awk Yacc", "NR 9", "Nobary Robyan", "Pratyavayah", "Daiyen Fooels", "Lep Gex Ven Zea", "Prirutsenie", "Elbib Yloh", "Verr Yed Horre", "Venzar Borgavve", "Tharr", "Yum Yum", "Kernod Wel", "Elam Ebow", "Duam Xnaht", "Andova Begarin", "Kirje", "Hackem Muche", "Velox Neb", "Foobie Bletch", "Temov", "Garven Deh", "Read Me"];
+        const EFFECTS = ["???", "Blank", "Fire", "Remove Curse", "Light", "Identify", "Repair", "Destroy Armor", "Magic Mapping", "Charging", "Conjure Arrow", "Food", "Teleportation", "Summon", "Enchant Weapon", "Enchant Armor", "Letter"];
+
         const urlParams = new URLSearchParams(window.location.search);
-        let roomId = urlParams.get('room');
-        if (!roomId) {
-            roomId = Math.random().toString(36).substring(2, 8);
-            window.history.replaceState(null, null, `?room=${roomId}`);
-        }
-        document.getElementById('roomDisplay').innerText = `Room: ${roomId}`;
+        let roomId = urlParams.get('room') || Math.random().toString(36).substring(2, 8);
+        if (!urlParams.get('room')) history.replaceState(null, null, `?room=${roomId}`);
+        document.getElementById('roomDisp').innerHTML = `<span id="syncDot" class="status-dot"></span>Room: ${roomId}`;
 
-        // Initialize Database with multiple relay peers for better sync
-        const gun = Gun({
-            peers: ['https://gun-manhattan.herokuapp.com/gun', 'https://relay.peer.ooo/gun']
-        }).get('barony_sync_v6').get(roomId);
+        let charName = localStorage.getItem('barony_user') || prompt("Enter Character Name:") || "Adventurer";
+        localStorage.setItem('barony_user', charName);
 
+        const grid = document.getElementById('grid');
         const currentSelections = {};
-        const grid = document.getElementById('scrollGrid');
 
-        // PRE-RENDER: Hard-code the UI so it never disappears
-        SCROLL_NAMES.forEach(name => {
-            const item = document.createElement('div');
-            item.className = 'scroll-item';
-            const safeId = name.replace(/\s+/g, '');
-            item.innerHTML = `<span class="scroll-name">${name}</span><select id="sel-${safeId}"></select>`;
-            grid.appendChild(item);
+        // 1. Build Static UI
+        NAMES.forEach(name => {
+            const div = document.createElement('div');
+            div.className = 'item';
+            const safeId = name.replace(/\s+/g,'');
+            div.innerHTML = `<span>${name}</span><select id="s-${safeId}"></select>`;
+            grid.appendChild(div);
             
-            const sel = document.getElementById(`sel-${safeId}`);
-            ALL_EFFECTS.forEach(eff => {
+            const sel = div.querySelector('select');
+            EFFECTS.forEach(e => {
                 const opt = document.createElement('option');
-                opt.value = opt.text = eff;
+                opt.value = opt.text = e;
                 sel.appendChild(opt);
             });
 
-            sel.onchange = (e) => {
-                gun.get('scrolls').get(name).put(e.target.value);
+            sel.onchange = async () => {
+                await supabase.from('scrolls').upsert({
+                    room_id: roomId, 
+                    scroll_name: name, 
+                    effect: sel.value
+                }, { onConflict: 'room_id,scroll_name' });
             };
-
-            // LISTEN: For live updates
-            gun.get('scrolls').get(name).on((val) => {
-                currentSelections[name] = val || "???";
-                updateUI();
-            });
         });
 
-        function updateUI() {
+        // 2. Realtime Sync Logic
+        const channel = supabase.channel('db-changes')
+            .on('postgres_changes', { event: '*', schema: 'public', table: 'scrolls' }, payload => {
+                if (payload.new && payload.new.room_id === roomId) {
+                    applyUpdate(payload.new.scroll_name, payload.new.effect);
+                }
+                if (payload.eventType === 'DELETE') loadData(); // Handle reset
+            })
+            .subscribe((status) => {
+                if(status === 'SUBSCRIBED') document.getElementById('syncDot').classList.add('online');
+            });
+
+        function applyUpdate(name, effect) {
+            currentSelections[name] = effect;
+            const sel = document.getElementById(`s-${name.replace(/\s+/g,'')}`);
+            if (sel) {
+                sel.value = effect;
+                sel.classList.toggle('identified', effect !== "???");
+            }
+            updateExclusions();
+        }
+
+        function updateExclusions() {
             const used = Object.values(currentSelections).filter(v => v !== "???" && v !== "Letter");
-            let discovered = 0;
-
-            SCROLL_NAMES.forEach(name => {
-                const sel = document.getElementById(`sel-${name.replace(/\s+/g, '')}`);
-                const val = currentSelections[name] || "???";
-                if(val !== "???") discovered++;
-
+            let disc = 0;
+            NAMES.forEach(name => {
+                const sel = document.getElementById(`s-${name.replace(/\s+/g,'')}`);
+                const val = sel.value;
+                if(val !== "???") disc++;
                 Array.from(sel.options).forEach(opt => {
                     const isUsed = used.includes(opt.value) && val !== opt.value && opt.value !== "???" && opt.value !== "Letter";
                     opt.disabled = isUsed;
                     opt.style.color = isUsed ? "#444" : "var(--highlight)";
                 });
-                sel.value = val;
-                sel.classList.toggle('identified', val !== "???");
             });
-            document.getElementById('counter').innerText = `Discovered: ${discovered} / 24`;
+            document.getElementById('counter').innerText = `Discovered: ${disc} / 24`;
         }
 
-        // PLAYER SYNC
-        let myName = localStorage.getItem('barony_user') || prompt("Enter Name:") || "Adventurer";
-        localStorage.setItem('barony_user', myName);
-
-        setInterval(() => gun.get('players').get(myName).put(Date.now()), 3000);
-        gun.get('players').map().on((time, name) => {
-            const div = document.getElementById('playerList');
-            let el = document.getElementById(`p-${name}`);
-            if (Date.now() - time < 10000) {
-                if (!el) {
-                    el = document.createElement('span');
-                    el.id = `p-${name}`; el.className = 'player-tag';
-                    el.innerText = name; div.appendChild(el);
-                }
-            } else if (el) { el.remove(); }
-        });
-
-        function copyRoomLink() {
-            navigator.clipboard.writeText(window.location.href);
-            alert("Link copied! Send to friends.");
-        }
-
-        function joinManualRoom() {
-            const id = document.getElementById('manualRoom').value.trim();
-            if(id) window.location.href = `?room=${id}`;
-        }
-
-        function resetRun() {
-            if(confirm("Reset all scrolls?")) {
-                SCROLL_NAMES.forEach(n => gun.get('scrolls').get(n).put("???"));
+        async function loadData() {
+            const { data } = await supabase.from('scrolls').select('*').eq('room_id', roomId);
+            if (data) {
+                NAMES.forEach(n => applyUpdate(n, "???")); // Reset local state first
+                data.forEach(row => applyUpdate(row.scroll_name, row.effect));
             }
         }
+
+        // 3. Presence Logic
+        setInterval(async () => {
+            await supabase.from('players').upsert({room_id: roomId, name: charName, last_seen: new Date().toISOString()}, {onConflict: 'room_id,name'});
+        }, 5000);
+
+        supabase.channel('p-sync').on('postgres_changes', {event: '*', schema: 'public', table: 'players'}, () => refreshPlayers()).subscribe();
+
+        async function refreshPlayers() {
+            const { data } = await supabase.from('players').select('*').eq('room_id', roomId);
+            const list = document.getElementById('playerList');
+            if(!data) return;
+            list.innerHTML = "In Dungeon: ";
+            data.filter(p => (new Date() - new Date(p.last_seen)) < 15000).forEach(p => {
+                list.innerHTML += `<span class="player-tag">${p.name}</span>`;
+            });
+        }
+
+        async function resetRun() {
+            if(confirm("Wipe all scrolls for this run?")) {
+                await supabase.from('scrolls').delete().eq('room_id', roomId);
+                NAMES.forEach(n => applyUpdate(n, "???"));
+            }
+        }
+
+        function copyLink() { navigator.clipboard.writeText(window.location.href); alert("Room link copied!"); }
+
+        // Startup
+        loadData();
+        refreshPlayers();
     </script>
 </body>
 </html>
