--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
     <script>
         // CONFIG - Using the details you provided
-        const SUB_URL = "https://pvbeaaatyuunnlzybgsu.supabase.co";
+        const SUB_URL = "https://pvbeaaatyaunnlzybgsu.supabase.co";
         const SUB_KEY = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InB2YmVhYWF0eWF1bm5lenliZ3N1Iiwicm9sZSI6ImFub24iLCJpYXQiOjE3NzA4NDM1NDQsImV4cCI6MjA4NjQxOTU0NH0.7YZAuLHZnv8Zm6d-2lmf8oHmQ7Ebw5dznF8ZwqdIDOY";
         
         const supabase = supabase.createClient(SUB_URL, SUB_KEY);
