--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Barony Scroll Tracker</title>
+    <title>Barony Scroll Tracker - Final</title>
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=VT323&display=swap');
@@ -41,6 +41,7 @@
                 <span id="syncDot" class="status-dot"></span>
                 <span id="roomDisp" style="color:#8a7a6a">Room: ...</span>
                 <button onclick="copyLink()">Copy Link</button>
+                <button onclick="changeName()" style="font-size: 0.8rem; opacity: 0.7;">Edit Name</button>
             </div>
             <div style="display:flex; gap: 5px;">
                 <input type="text" id="manualId" placeholder="Join ID" style="width: 60px; background:#000; border:1px solid var(--gold); color:#fff; font-family:'VT323'; padding: 2px 5px;">
@@ -51,30 +52,29 @@
     </div>
 
     <script>
-        // --- 1. SETTINGS FROM YOUR SUPABASE SCREENSHOTS ---
         const SUB_URL = "https://pvbeaaatyaunnlzybgsu.supabase.co"; 
-        const SUB_KEY = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InB2YmVhYWF0eWF1bm5senliZ3N1Iiwicm9sZSI6ImFub24iLCJpYXQiOjE3NzA4NDM1NDQsImV4cCI6MjA4NjQxOTU0NH0.7YZAuLHZnv8Zm6d-2lmf8oHmQ7Ebw5dznF8ZwqdIDOY" // PASTE YOUR FULL ANON PUBLIC KEY HERE FROM YOUR LAST SCREENSHOT
-        
+        const SUB_KEY = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InB2YmVhYWF0eWF1bm5lenliZ3N1Iiwicm9sZSI6ImFub24iLCJpYXQiOjE3NzA4NDM1NDQsImV4cCI6MjA4NjQxOTU0NH0.7YZAuLHZnv8Zm6d-2lmf8oHmQ7Ebw5dznF8ZwqdIDOY"; 
+
+        const supabaseClient = supabase.createClient(SUB_URL, SUB_KEY);
         const NAMES = ["Zelgo Mer", "Juyed Awk Yacc", "NR 9", "Nobary Robyan", "Pratyavayah", "Daiyen Fooels", "Lep Gex Ven Zea", "Prirutsenie", "Elbib Yloh", "Verr Yed Horre", "Venzar Borgavve", "Tharr", "Yum Yum", "Kernod Wel", "Elam Ebow", "Duam Xnaht", "Andova Begarin", "Kirje", "Hackem Muche", "Velox Neb", "Foobie Bletch", "Temov", "Garven Deh", "Read Me"];
         const EFFECTS = ["???", "Blank", "Fire", "Remove Curse", "Light", "Identify", "Repair", "Destroy Armor", "Magic Mapping", "Charging", "Conjure Arrow", "Food", "Teleportation", "Summon", "Enchant Weapon", "Enchant Armor", "Letter"];
 
-        const supabaseClient = supabase.createClient(SUB_URL, SUB_KEY);
-
-        // --- 2. ROOM & IDENTITY ---
         const urlParams = new URLSearchParams(window.location.search);
         let roomId = urlParams.get('room') || Math.random().toString(36).substring(2, 8);
         if (!urlParams.get('room')) history.replaceState(null, null, `?room=${roomId}`);
         document.getElementById('roomDisp').innerText = `Room: ${roomId}`;
 
         let charName = localStorage.getItem('barony_user');
-        if (!charName) {
+        if (!charName) changeName();
+
+        function changeName() {
             charName = prompt("Enter Character Name:") || "Adventurer";
             localStorage.setItem('barony_user', charName);
+            location.reload();
         }
 
         const currentSelections = {};
 
-        // --- 3. UI GENERATOR ---
         function initGrid() {
             const grid = document.getElementById('grid');
             grid.innerHTML = ''; 
@@ -84,32 +84,18 @@
                 const safeId = name.replace(/\s+/g,'');
                 div.innerHTML = `<span>${name}</span><select id="s-${safeId}"></select>`;
                 grid.appendChild(div);
-                
                 const sel = div.querySelector('select');
                 EFFECTS.forEach(e => {
                     const opt = document.createElement('option');
                     opt.value = opt.text = e;
                     sel.appendChild(opt);
                 });
-
                 sel.onchange = async () => {
                     await supabaseClient.from('scrolls').upsert({
-                        room_id: roomId, 
-                        scroll_name: name, 
-                        effect: sel.value
+                        room_id: roomId, scroll_name: name, effect: sel.value
                     }, { onConflict: 'room_id,scroll_name' });
                 };
             });
-        }
-
-        function applyUpdate(name, effect) {
-            currentSelections[name] = effect;
-            const sel = document.getElementById(`s-${name.replace(/\s+/g,'')}`);
-            if (sel) {
-                sel.value = effect;
-                sel.classList.toggle('identified', effect !== "???");
-            }
-            updateExclusions();
         }
 
         function updateExclusions() {
@@ -128,27 +114,39 @@
             document.getElementById('counter').innerText = `Discovered: ${disc} / 24`;
         }
 
-        // --- 4. DATA SYNC ---
+        function applyUpdate(name, effect) {
+            currentSelections[name] = effect;
+            const sel = document.getElementById(`s-${name.replace(/\s+/g,'')}`);
+            if (sel) {
+                sel.value = effect;
+                sel.classList.toggle('identified', effect !== "???");
+            }
+            updateExclusions();
+        }
+
         async function loadData() {
             const { data } = await supabaseClient.from('scrolls').select('*').eq('room_id', roomId);
             if (data) data.forEach(row => applyUpdate(row.scroll_name, row.effect));
         }
 
-        supabaseClient.channel('room-sync')
+        // IMPROVED REALTIME: Listen for ALL changes in this room
+        supabaseClient.channel('any')
             .on('postgres_changes', { event: '*', schema: 'public', table: 'scrolls' }, payload => {
-                if (payload.new && payload.new.room_id === roomId) applyUpdate(payload.new.scroll_name, payload.new.effect);
-                if (payload.eventType === 'DELETE') location.reload();
+                if (payload.new && payload.new.room_id === roomId) {
+                    applyUpdate(payload.new.scroll_name, payload.new.effect);
+                } else if (payload.eventType === 'DELETE') {
+                    location.reload(); 
+                }
             })
             .subscribe(status => {
                 if(status === 'SUBSCRIBED') document.getElementById('syncDot').classList.add('online');
             });
 
-        // --- 5. PRESENCE ---
         setInterval(async () => {
             await supabaseClient.from('players').upsert({room_id: roomId, name: charName, last_seen: new Date().toISOString()}, {onConflict: 'room_id,name'});
         }, 5000);
 
-        supabaseClient.channel('presence-sync').on('postgres_changes', {event: '*', schema: 'public', table: 'players'}, () => refreshPlayers()).subscribe();
+        supabaseClient.channel('p').on('postgres_changes', {event: '*', schema: 'public', table: 'players'}, () => refreshPlayers()).subscribe();
 
         async function refreshPlayers() {
             const { data } = await supabaseClient.from('players').select('*').eq('room_id', roomId);
@@ -161,7 +159,7 @@
         }
 
         async function resetRun() {
-            if(confirm("Wipe all scrolls for this room?")) {
+            if(confirm("Wipe all scrolls?")) {
                 await supabaseClient.from('scrolls').delete().eq('room_id', roomId);
                 location.reload();
             }
