--- a/index.html
+++ b/index.html
@@ -1,130 +1,179 @@
-<script>
-    // API Configuration
-    const SUB_URL = "https://pvbeaaatyaunnlzybgsu.supabase.co"; 
-    const SUB_KEY = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InB2YmVhYWF0eWF1bm5lenliZ3N1Iiwicm9sZSI6ImFub24iLCJpYXQiOjE3NzA4NDM1NDQsImV4cCI6MjA4NjQxOTU0NH0.7YZAuLHZnv8Zm6d-2lmf8oHmQ7Ebw5dznF8ZwqdIDOY"; 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Barony Scroll Tracker - Full Restore</title>
+    <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=VT323&display=swap');
+        :root { --bg: #0f0a07; --panel: #261a12; --gold: #8c6a31; --text: #e0d0b8; --highlight: #f2c05e; --danger: #8a1313; }
+        body { background: var(--bg); color: var(--text); font-family: 'VT323', monospace; padding: 10px; display: flex; justify-content: center; margin: 0; }
+        .container { width: 100%; max-width: 950px; border: 4px solid var(--gold); background: var(--panel); box-shadow: 0 0 20px #000; }
+        header { padding: 15px; border-bottom: 4px solid var(--gold); background: #1a120b; }
+        .scroll-grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(280px, 1fr)); background: #000; min-height: 200px; }
+        .item { display: flex; justify-content: space-between; align-items: center; padding: 10px 15px; border: 1px solid #33241a; }
+        .item:nth-child(even) { background: #1e150f; }
+        select { background: #000; color: var(--highlight); border: 2px solid var(--gold); font-family: 'VT323'; font-size: 1.2rem; width: 160px; cursor: pointer; }
+        select.identified { border-color: #4CAF50; color: #fff; box-shadow: 0 0 5px #4CAF50; }
+        .controls { padding: 15px; display: flex; flex-wrap: wrap; gap: 10px; justify-content: space-between; align-items: center; background: #1a120b; border-top: 2px solid var(--gold); }
+        button { background: #3d2b1f; color: #fff; border: 2px solid var(--gold); cursor: pointer; font-family: 'VT323'; padding: 6px 12px; font-size: 1rem; }
+        .player-tag { color: var(--highlight); margin-right: 12px; border-bottom: 1px solid; font-size: 1.2rem; }
+        .status-dot { height: 10px; width: 10px; border-radius: 50%; display: inline-block; margin-right: 5px; background: #555; transition: background 0.3s; }
+        .online { background: #4CAF50; box-shadow: 0 0 8px #4CAF50; }
+    </style>
+</head>
+<body>
+    <div class="container">
+        <header>
+            <div style="display:flex; justify-content:space-between; align-items: center;">
+                <h1 style="margin:0">📜 BARONY SCROLLS</h1>
+                <div id="counter" style="color: #4CAF50; font-size: 1.6rem;">Discovered: 0 / 24</div>
+            </div>
+            <div id="playerList" style="margin-top:10px; color:#8a7a6a; min-height: 1.2rem;">In Dungeon: </div>
+        </header>
+        <div id="grid" class="scroll-grid">
+            </div>
+        <div class="controls">
+            <div>
+                <span id="syncDot" class="status-dot"></span>
+                <span id="roomDisp" style="color:#8a7a6a">Room: ...</span>
+                <button onclick="copyLink()">Copy Link</button>
+                <button onclick="localStorage.removeItem('barony_user'); location.reload();" style="font-size: 0.7rem; opacity: 0.6;">Change Name</button>
+            </div>
+            <div style="display:flex; gap: 5px;">
+                <input type="text" id="manualId" placeholder="Join ID" style="width: 60px; background:#000; border:1px solid var(--gold); color:#fff; font-family:'VT323'; padding: 2px 5px;">
+                <button onclick="window.location.search = '?room=' + document.getElementById('manualId').value">Join</button>
+                <button style="background:var(--danger); border-color: #ff4d4d;" onclick="resetRun()">RESET RUN</button>
+            </div>
+        </div>
+    </div>
 
-    const supabaseClient = supabase.createClient(SUB_URL, SUB_KEY);
-    const NAMES = ["Zelgo Mer", "Juyed Awk Yacc", "NR 9", "Nobary Robyan", "Pratyavayah", "Daiyen Fooels", "Lep Gex Ven Zea", "Prirutsenie", "Elbib Yloh", "Verr Yed Horre", "Venzar Borgavve", "Tharr", "Yum Yum", "Kernod Wel", "Elam Ebow", "Duam Xnaht", "Andova Begarin", "Kirje", "Hackem Muche", "Velox Neb", "Foobie Bletch", "Temov", "Garven Deh", "Read Me"];
-    const EFFECTS = ["???", "Blank", "Fire", "Remove Curse", "Light", "Identify", "Repair", "Destroy Armor", "Magic Mapping", "Charging", "Conjure Arrow", "Food", "Teleportation", "Summon", "Enchant Weapon", "Enchant Armor", "Letter"];
+    <script>
+        console.log("App starting...");
 
-    const urlParams = new URLSearchParams(window.location.search);
-    let roomId = urlParams.get('room') || Math.random().toString(36).substring(2, 8);
-    if (!urlParams.get('room')) history.replaceState(null, null, `?room=${roomId}`);
-    document.getElementById('roomDisp').innerText = `Room: ${roomId}`;
+        const SUB_URL = "https://pvbeaaatyaunnlzybgsu.supabase.co"; 
+        const SUB_KEY = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InB2YmVhYWF0eWF1bm5lenliZ3N1Iiwicm9sZSI6ImFub24iLCJpYXQiOjE3NzA4NDM1NDQsImV4cCI6MjA4NjQxOTU0NH0.7YZAuLHZnv8Zm6d-2lmf8oHmQ7Ebw5dznF8ZwqdIDOY"; 
 
-    let charName = localStorage.getItem('barony_user') || "Adventurer";
-    const currentSelections = {};
+        const supabaseClient = supabase.createClient(SUB_URL, SUB_KEY);
+        const NAMES = ["Zelgo Mer", "Juyed Awk Yacc", "NR 9", "Nobary Robyan", "Pratyavayah", "Daiyen Fooels", "Lep Gex Ven Zea", "Prirutsenie", "Elbib Yloh", "Verr Yed Horre", "Venzar Borgavve", "Tharr", "Yum Yum", "Kernod Wel", "Elam Ebow", "Duam Xnaht", "Andova Begarin", "Kirje", "Hackem Muche", "Velox Neb", "Foobie Bletch", "Temov", "Garven Deh", "Read Me"];
+        const EFFECTS = ["???", "Blank", "Fire", "Remove Curse", "Light", "Identify", "Repair", "Destroy Armor", "Magic Mapping", "Charging", "Conjure Arrow", "Food", "Teleportation", "Summon", "Enchant Weapon", "Enchant Armor", "Letter"];
 
-    function initGrid() {
-        const grid = document.getElementById('grid');
-        grid.innerHTML = ''; 
-        NAMES.forEach(name => {
-            const div = document.createElement('div');
-            div.className = 'item';
-            const safeId = name.replace(/\s+/g,'');
-            div.innerHTML = `<span>${name}</span><select id="s-${safeId}"></select>`;
-            grid.appendChild(div);
-            const sel = div.querySelector('select');
-            EFFECTS.forEach(e => {
-                const opt = document.createElement('option');
-                opt.value = opt.text = e;
-                sel.appendChild(opt);
+        const urlParams = new URLSearchParams(window.location.search);
+        let roomId = urlParams.get('room') || Math.random().toString(36).substring(2, 8);
+        if (!urlParams.get('room')) history.replaceState(null, null, `?room=${roomId}`);
+        document.getElementById('roomDisp').innerText = `Room: ${roomId}`;
+
+        let charName = localStorage.getItem('barony_user') || "Adventurer";
+        const currentSelections = {};
+
+        function initGrid() {
+            console.log("Initializing grid...");
+            const grid = document.getElementById('grid');
+            grid.innerHTML = ''; 
+            NAMES.forEach(name => {
+                const div = document.createElement('div');
+                div.className = 'item';
+                const safeId = name.replace(/\s+/g,'');
+                div.innerHTML = `<span>${name}</span><select id="s-${safeId}"></select>`;
+                grid.appendChild(div);
+                const sel = div.querySelector('select');
+                EFFECTS.forEach(e => {
+                    const opt = document.createElement('option');
+                    opt.value = opt.text = e;
+                    sel.appendChild(opt);
+                });
+                sel.onchange = async () => {
+                    await supabaseClient.from('scrolls').upsert({
+                        room_id: roomId, scroll_name: name, effect: sel.value
+                    }, { onConflict: 'room_id,scroll_name' });
+                };
             });
-            sel.onchange = async () => {
-                await supabaseClient.from('scrolls').upsert({
-                    room_id: roomId, scroll_name: name, effect: sel.value
-                }, { onConflict: 'room_id,scroll_name' });
-            };
-        });
-    }
-
-    function applyUpdate(name, effect) {
-        currentSelections[name] = effect;
-        const sel = document.getElementById(`s-${name.replace(/\s+/g,'')}`);
-        if (sel) {
-            sel.value = effect;
-            sel.classList.toggle('identified', effect !== "???");
-            updateExclusions();
         }
-    }
 
-    function updateExclusions() {
-        const used = Object.values(currentSelections).filter(v => v !== "???" && v !== "Letter" && v !== "Blank");
-        let disc = 0;
-        NAMES.forEach(name => {
+        function applyUpdate(name, effect) {
+            currentSelections[name] = effect;
             const sel = document.getElementById(`s-${name.replace(/\s+/g,'')}`);
-            if(!sel) return;
-            if(sel.value !== "???") disc++;
-            Array.from(sel.options).forEach(opt => {
-                const isUsed = used.includes(opt.value) && sel.value !== opt.value && opt.value !== "???" && opt.value !== "Letter" && opt.value !== "Blank";
-                opt.disabled = isUsed;
-                opt.style.color = isUsed ? "#444" : "var(--highlight)";
-            });
-        });
-        document.getElementById('counter').innerText = `Discovered: ${disc} / 24`;
-    }
-
-    // --- REALTIME LOGIC ---
-    let mainChannel;
-
-    function connectRealtime() {
-        if (mainChannel) supabaseClient.removeChannel(mainChannel);
-
-        mainChannel = supabaseClient.channel('any', { config: { realtime: { params: { eventsPerSecond: 10 } } } })
-            .on('postgres_changes', { event: '*', schema: 'public', table: 'scrolls' }, payload => {
-                if (payload.new && payload.new.room_id === roomId) {
-                    applyUpdate(payload.new.scroll_name, payload.new.effect);
-                }
-                if (payload.eventType === 'DELETE') location.reload();
-            })
-            .on('postgres_changes', { event: '*', schema: 'public', table: 'players' }, () => refreshPlayers())
-            .subscribe((status) => {
-                const dot = document.getElementById('syncDot');
-                if (status === 'SUBSCRIBED') {
-                    dot.classList.add('online');
-                } else {
-                    dot.classList.remove('online');
-                }
-            });
-    }
-
-    // Heartbeat to keep players online and sync alive
-    setInterval(async () => {
-        await supabaseClient.from('players').upsert({
-            room_id: roomId, name: charName, last_seen: new Date().toISOString()
-        }, { onConflict: 'room_id,name' });
-        
-        // If the dot is grey, try to reconnect
-        if (!document.getElementById('syncDot').classList.contains('online')) {
-            connectRealtime();
+            if (sel) {
+                sel.value = effect;
+                sel.classList.toggle('identified', effect !== "???");
+                updateExclusions();
+            }
         }
-    }, 5000);
 
-    async function refreshPlayers() {
-        const { data } = await supabaseClient.from('players').select('*').eq('room_id', roomId);
-        const list = document.getElementById('playerList');
-        if(!data) return;
-        list.innerHTML = "In Dungeon: ";
-        data.filter(p => (new Date() - new Date(p.last_seen)) < 15000).forEach(p => {
-            list.innerHTML += `<span class="player-tag">${p.name}</span> `;
-        });
-    }
-
-    async function loadData() {
-        const { data } = await supabaseClient.from('scrolls').select('*').eq('room_id', roomId);
-        if (data) data.forEach(row => applyUpdate(row.scroll_name, row.effect));
-        refreshPlayers();
-    }
-
-    async function resetRun() {
-        if(confirm("Wipe all scrolls?")) {
-            await supabaseClient.from('scrolls').delete().eq('room_id', roomId);
+        function updateExclusions() {
+            const used = Object.values(currentSelections).filter(v => v !== "???" && v !== "Letter" && v !== "Blank");
+            let disc = 0;
+            NAMES.forEach(name => {
+                const sel = document.getElementById(`s-${name.replace(/\s+/g,'')}`);
+                if(!sel) return;
+                if(sel.value !== "???") disc++;
+                Array.from(sel.options).forEach(opt => {
+                    const isUsed = used.includes(opt.value) && sel.value !== opt.value && opt.value !== "???" && opt.value !== "Letter" && opt.value !== "Blank";
+                    opt.disabled = isUsed;
+                    opt.style.color = isUsed ? "#444" : "var(--highlight)";
+                });
+            });
+            document.getElementById('counter').innerText = `Discovered: ${disc} / 24`;
         }
-    }
 
-    function copyLink() { navigator.clipboard.writeText(window.location.href); alert("Copied!"); }
+        let mainChannel;
+        function connectRealtime() {
+            if (mainChannel) supabaseClient.removeChannel(mainChannel);
+            console.log("Attempting Realtime connection...");
 
-    initGrid();
-    loadData();
-    connectRealtime();
-</script>
+            mainChannel = supabaseClient.channel('any')
+                .on('postgres_changes', { event: '*', schema: 'public', table: 'scrolls' }, payload => {
+                    if (payload.new && payload.new.room_id === roomId) {
+                        applyUpdate(payload.new.scroll_name, payload.new.effect);
+                    }
+                })
+                .on('postgres_changes', { event: '*', schema: 'public', table: 'players' }, () => refreshPlayers())
+                .subscribe((status) => {
+                    console.log("Connection Status:", status);
+                    const dot = document.getElementById('syncDot');
+                    if (status === 'SUBSCRIBED') {
+                        dot.classList.add('online');
+                    } else {
+                        dot.classList.remove('online');
+                    }
+                });
+        }
+
+        async function refreshPlayers() {
+            const { data } = await supabaseClient.from('players').select('*').eq('room_id', roomId);
+            const list = document.getElementById('playerList');
+            if(!data) return;
+            list.innerHTML = "In Dungeon: ";
+            data.filter(p => (new Date() - new Date(p.last_seen)) < 15000).forEach(p => {
+                list.innerHTML += `<span class="player-tag">${p.name}</span> `;
+            });
+        }
+
+        async function loadData() {
+            const { data, error } = await supabaseClient.from('scrolls').select('*').eq('room_id', roomId);
+            if (error) console.error("Data Load Error:", error);
+            if (data) data.forEach(row => applyUpdate(row.scroll_name, row.effect));
+        }
+
+        // Keepalive & Presence
+        setInterval(async () => {
+            await supabaseClient.from('players').upsert({
+                room_id: roomId, name: charName, last_seen: new Date().toISOString()
+            }, { onConflict: 'room_id,name' });
+            
+            if (!document.getElementById('syncDot').classList.contains('online')) {
+                connectRealtime();
+            }
+        }, 5000);
+
+        function copyLink() { navigator.clipboard.writeText(window.location.href); alert("Copied!"); }
+        function resetRun() { if(confirm("Reset?")) supabaseClient.from('scrolls').delete().eq('room_id', roomId); }
+
+        // Start sequences
+        initGrid();
+        loadData();
+        connectRealtime();
+    </script>
+</body>
+</html>
